--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password: "[123123]"
-  host: localhost
+  host: 127.0.0.1
 
 development:
   <<: *default
